[package]
name = "bevy_flatland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", default-features = true, features=["dynamic_linking"]}
bevy-inspector-egui = "0.19.0"
bevy_rapier2d = "0.22.0"
nalgebra = "0.32.3"
futures-lite = "1.13.0"
itertools = "0.11.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3